--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_200">#6ABDA6</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primary">#6ABDA6</color>
+    <color name="lightorange">#FDBD39</color>
+    <color name="cloony">#C1BEC1</color>
+    <color name="softgold">#DECC91</color>
+    <color name="teflon">#554D56</color>
+    <color name="royalblue">#2E6FB4</color>
+    <color name="gandalf">#979197</color>
+    <color name="cornflowerblue">#419BF9</color>
+    <color name="karl">#EDECED</color>
+    <color name="peach">#EE6723</color>
+    <color name="gray6">#FCFCFC</color>
+    <color name="colorblackgreen">#273431</color>
+    <color name="greengrey">#6C7976</color>
+    <color name="gray1">#333333</color>
+    <color name="gray2">#4F4F4F</color>
+    <color name="gray3">#828282</color>
+    <color name="secondarycolor">#FF5D57</color>
 </resources>
